--- a/assets/style.css
+++ b/assets/style.css
@@ -1,18 +1,35 @@
-body {
+.pad {
+    width: 500px;
+    height: 500px;
+    display: grid;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* body {
     min-height: 100vh;
     margin: 0;
     padding: 0;
 }
 
 .grid-container {
-    display: grid;
-    place-content: center;
-    grid-template-columns: repeat(16,16px);
-    grid-template-rows: repeat(16,16px);
+ width: 800px;
+ display: flex;
+ justify-content: center;
 }
 
-.grid-container div {
-    width: 16px;
-    height: 16px;
-    border: 1px solid black;
-}
+.grid-container div
+,.grid-container div div {
+
+    background-color: aqua;
+    flex-shrink: 1;
+} */
