--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,72 @@
+
+* {
+    box-sizing: initial;
+    margin: 0;
+    font-family: sans-serif;
+}
+body {
+    background-color: thistle;
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+    text-align: center;
+}
+
 .pad {
     width: 500px;
     height: 500px;
     display: grid;
+    border: 10px solid purple;
+    border-radius: 10px;
+    box-shadow: 10px 10px 15px rgba(128, 0, 128, 0.56);
 }
-
-
+.title {
+    font-size: 1.5rem;
+    margin: 0px 0px 20px 0px;
+    font-weight: 900;
+}
+.btns {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.setSize,
+.btns button {
+    font-size: 1rem;
+    padding: 5px 15px 5px 15px;
+    border: 3px groove purple;
+    border-radius: 5px;
+    background-color: inherit;
+    color: rgb(70, 0, 70);
+    transition: .2s all ease-in-out;
+}
+.btns button:hover {
+    transition: .3s all ease-in-out;
+    transform: translate(0px, -10px) scale(1.3,1.3);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.558);
+    border-color: thistle;
+    font-size: 1rem;
+    color: white;
+    text-shadow: 0 0px 5px purple;
+    cursor: pointer;
+}
+.setSize:hover {
+    transition: .3s all ease-in-out;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.558);
+    border-color: thistle;
+    font-size: 1rem;
+    color: white;
+    text-shadow: 0 0px 5px purple;
+    cursor: pointer;
+}
+input {
+    height: 25px;
+    border-radius: 10px;
+}
 
 
 
